GNU Wget NEWS -- history of user-visible changes.

Copyright (C) 1997, 1998, 1999, 2000, 2001, 2002, 2003, 2004, 2005,
2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2014, 2015 Free
Software Foundation, Inc.
See the end for copying conditions.

Please send GNU Wget bug reports to <bug-wget@gnu.org>.

* Changes in Wget X.Y.Z

* When processing a Metalink file, reject downloaded files which don't
  agree with their own metalink:size value:
  https://tools.ietf.org/html/rfc5854#section-4.2.16

* When processing a Metalink file, with --continue resume partially
  downloaded files and keep fully downloaded files even if they fail
  the verification.

* When processing a Metalink file, create the parent directories of a
  "path/file" destination file name:
  https://tools.ietf.org/html/rfc5854#section-4.1.2.1
  https://tools.ietf.org/html/rfc5854#section-4.2.8.3

* On a recursive download, append a .tmp suffix to temporary files
  that will be deleted after being parsed, and create them
  readable/writable only by the owner.

* Changes in Wget 1.18

* By default, on server redirects to a FTP resource, use the original
  URL to get the local file name. Close CVE-2016-4971.  This
  introduces a backward-incompatibility for HTTP->FTP redirects and
  any script that relies on the old  behaviour must use
  --trust-server-names.

* Check the HSTS file is not world-writable before using it.

* Parse <img srcset> attributes on a recursive download.

* Fix problem with SNI server names having trailing dot(s)

* New options --bind-dns-address and --dns-servers.

* When Wget is built with libiconv, it now converts non-ASCII URIs to
  the locale's codeset when it creates files.  The encoding of the
  remote files and URIs is taken from --remote-encoding, defaulting to
  UTF-8.  The result is that non-ASCII URIs and files downloaded via
  HTTP/HTTPS and FTP will have names on the local filesystem that
  correspond to their remote names.

* Changes in Wget 1.17.1
